# streamdaq

./: .pre-commit-config.yaml  404.html  DEVELOPMENT.md  README.md  index.html  mkdocs.yml  noxfile.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
docs/: index.md
docs/notebooks/: starting_example.ipynb
docs/stylesheets/: extra.css
notebooks/: starting_example.ipynb
notebooks/starting_example/: index.html
search/: search_index.json
src/streamdaq/: __about__.py
src/streamdaq/checks/: base.py
src/streamdaq/checks/instant/: base.py
src/streamdaq/checks/instant/any_column/: in_range.py  in_row_comparison.py  in_set.py  length.py  value.py
src/streamdaq/checks/instant/categorical/: regex.py
src/streamdaq/checks/window/: base.py
src/streamdaq/computations/: generic.py  numeric.py  strings.py
src/streamdaq/measures/: __init__.py  base.py  test.py
src/streamdaq/measures/any_column/: __init__.py  availability.py  constancy.py  count.py  distinct_count.py  distinct_count_approx.py  distinct_fraction.py  distinct_fraction_approx.py  distinct_placeholder_count.py  distinct_placeholder_fraction.py  in_set_count.py  in_set_fraction.py  max.py  min.py  missing_count.py  missing_fraction.py  monotonic.py  most_frequent.py  ndarray.py  sorted_tuple_time.py  sorted_tuple_value.py  tuple.py  unique_count.py  unique_fraction.py  unique_over_distinct.py  window_duration.py
src/streamdaq/measures/categorical/: __init__.py  max_length.py  mean_length.py  median_length.py  min_length.py  regex_count.py  regex_fraction.py
src/streamdaq/measures/numeric/: __init__.py  above_mean_count.py  above_mean_fraction.py  best_line_fit_slope.py  correlation.py  first_digit_freqs.py  frozen_numbers.py  in_range_count.py  in_range_fraction.py  max_fractional_part_length.py  max_integer_part_length.py  mean.py  mean_fractional_part_length.py  mean_integer_part_length.py  median.py  median_fractional_part_length.py  median_integer_part_length.py  min_fractional_part_length.py  min_integer_part_length.py  percentiles.py  standard_deviation.py  sum.py
src/streamdaq/reducers/: distinct_count_approx.py  most_frequent_approx.py  std_dev.py
src/streamdaq/schema/: base.py  evb.py
src/streamdaq/scripts/: async_transform_test.py  json_test.py  pathway_test.py
src/streamdaq/translators/: string_to_callable.py
src/streamdaq/utils/: data_type_applicability.py  parsing.py  validation.py
tests/: __init__.py
tests/computations/: test_generic.py  test_numeric.py  test_strings.py
tests/measures/: test_base.py  test_measure_classes.py
tests/reducers/: test_reducers.py
tests/utils/: test_data_type_applicability.py  test_parsing.py  test_validation.py
