[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streamdaq"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Data & Web Science Lab AUTh", email = "gounaria@csd.auth.gr" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Datalab-Csd-Auth/streamdaq#readme"
Issues = "https://github.com/Datalab-Csd-Auth/streamdaq/issues"
Source = "https://github.com/Datalab-Csd-Auth/streamdaq"

[tool.hatch.version]
path = "src/streamdaq/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/streamdaq tests}"

[tool.coverage.run]
source_pkgs = ["streamdaq", "tests"]
branch = true
parallel = true
omit = [
  "src/streamdaq/__about__.py",
]

[tool.coverage.paths]
streamdaq = ["src/streamdaq", "*/streamdaq/src/streamdaq"]
tests = ["tests", "*/streamdaq/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
