[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streamdaq"
dynamic = ["version"]
description = 'Plug-and-play data quality monitoring for unbounded streams.'
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache 2.0"}
keywords = ["data-quality", "streaming", "real-time", "monitoring", "data-engineering"]
authors = [
    {name = "Georgios Atmatzidis", email = "gatmatza@csd.auth.gr"},
    {name = "Apostolos Giannoulidis", email = "agiannoul@csd.auth.gr"},
    {name = "Anastasios Gounaris", email = "gounaria@csd.auth.gr"}
]
maintainers = [
    {name = "Georgios Atmatzidis", email = "gatmatza@csd.auth.gr"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "pathway~=0.30.0"
]

[project.urls]
Documentation = "https://github.com/Datalab-Csd-Auth/streamdaq#readme"
Issues = "https://github.com/Datalab-Csd-Auth/streamdaq/issues"
Source = "https://github.com/Datalab-Csd-Auth/streamdaq"
Repository = "https://github.com/Datalab-Csd-Auth/streamdaq"
"Bug Tracker" = "https://github.com/Datalab-Csd-Auth/streamdaq/issues"

# Define optional dependencies for testing and docs
[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "pre-commit>=4.5.1",
    "identify>=2.6.18",  # used by pre-commit-ruff to lint pyproject.toml
]
test = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
]
docs = [
    "mkdocs-material",
    "mkdocs-jupyter",
]

[tool.hatch.version]
path = "src/streamdaq/__about__.py"

# --- RUFF CONFIGURATION ---
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]

# --- MYPY CONFIGURATION ---
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

# --- PYTEST & COVERAGE CONFIGURATION ---
[tool.pytest.ini_options]
addopts = "--cov=streamdaq --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]
